--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "php": "^5.6 || ^7.0"
     },
     "autoload": {
-        "psr-0": {
-            "Generator\\": "src/"
+        "psr-4": {
+            "Generator\\": "module/Generator/src/"
         }
     },
     "extra": {
